Updated metrics
