# docs/swagger.json
@@ -24,7 +24,7 @@
                 "summary": "Track telemetry",
                 "parameters": [
                     {
-                        "description": "track info",
+                        "description": "track telemetry info",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -75,7 +75,7 @@
             "type": "object",
             "required": [
                 "action",
-                "screen_id",
+                "screen",
                 "timestamp",
                 "user_id"
             ],
@@ -83,8 +83,11 @@
                 "action": {
                     "type": "string"
                 },
-                "screen_id": {
-                    "type": "integer"
+                "app_version": {
+                    "type": "string"
+                },
+                "screen": {
+                    "type": "string"
                 },
                 "timestamp": {
                     "type": "string"
