# internal/domain/telemetry/dto.go
@@ -7,28 +7,31 @@ import (
 )
 
 type Input struct {
-	UserID    uuid.UUID `json:"user_id"`
-	ScreenID  uint32    `json:"screen_id"`
-	Action    string    `json:"action"`
-	Timestamp time.Time `json:"timestamp"`
-	Country   string    `json:"country"`
-	OS        string    `json:"os"`
+	UserID     uuid.UUID `json:"user_id"`
+	Screen     string    `json:"screen"`
+	Action     string    `json:"action"`
+	Timestamp  time.Time `json:"timestamp"`
+	AppVersion string    `json:"app_version"`
+	Country    string    `json:"country"`
+	OS         string    `json:"os"`
 }
 
 func NewTelemetryInput(
 	userID uuid.UUID,
-	screenID uint32,
+	screen string,
 	action string,
 	timestamp time.Time,
+	appVersion string,
 	country string,
 	os string,
 ) Input {
 	return Input{
-		UserID:    userID,
-		ScreenID:  screenID,
-		Action:    action,
-		Timestamp: timestamp,
-		Country:   country,
-		OS:        os,
+		UserID:     userID,
+		Screen:     screen,
+		Action:     action,
+		Timestamp:  timestamp,
+		AppVersion: appVersion,
+		Country:    country,
+		OS:         os,
 	}
 }
